# rusotp

./: .editorconfig  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  c_examples.sh  demonstrate.sh  rusotp.hpp
.cargo/: config.toml
.github/workflows/: rusotp.yml
benches/: hotp.rs
c_examples/: cbindgen.toml  hotp_fn.cpp  totp_fn.cpp
contrib/: hotp_fn.cpp  hotp_generate.cpp  hotp_provisioning_uri.cpp  hotp_verify.cpp  rusotp.hpp  totp_fn.cpp  totp_generate.cpp  totp_generate_at.cpp  totp_provisioning_uri.cpp  totp_verify.cpp  totp_verify_at.cpp
examples/: hotp.cast  hotp.rs  hotp_demo.rs  hotp_fn.rs  hotp_generate.rs  hotp_generate_cpp.rs  hotp_provisioning_uri.rs  hotp_provisioning_uri_cpp.rs  hotp_readme.rs  hotp_readme_cpp.rs  hotp_verify.rs  hotp_verify_cpp.rs  rusotp.rs  totp.cast  totp.rs  totp_demo.rs  totp_fn.rs  totp_generate_at.rs  totp_generate_at_cpp.rs  totp_generate_cpp.rs  totp_provisioning_uri.rs  totp_provisioning_uri_cpp.rs  totp_readme.rs  totp_readme_cpp.rs  totp_verify.rs  totp_verify_at_cpp.rs  totp_verify_cpp.rs
examples/asciicast/: rusotp.cast
src/: hotp.rs  lib.rs  messages.rs  otp.rs  totp.rs
src/ffi/: c.rs  c_binds.rs  converter.rs  hotp_c_binds.rs  mod.rs  totp_c_binds.rs
src/ffi/converter/: converter_test.rs
src/ffi/hotp_c_binds/: hotp_c_bind_tests.rs  htop_c_bind_tests.rs
src/ffi/struct/: hotp_config.rs  mod.rs  result.rs  totp_config.rs
src/ffi/totp_c_binds/: totp_c_bind_tests.rs
src/otp/: algorithm.rs  base.rs  hotp.rs  mod.rs  otp.rs  totp.rs
src/otp/algorithm/: algorithm_test.rs
src/type/: mod.rs  otp_error.rs  radix.rs  secret.rs
src/uri/: hotp_uri.rs  mod.rs
src/util/: mod.rs  qr_code.rs
tests/: algorithm.rs  ffi_hotp.rs  ffi_totp.rs  hotp.rs  hotp_create.rs  hotp_fn.rs  hotp_generate.rs  hotp_match_rfc_samples.rs  hotp_parse_uri.rs  hotp_provisioning_uri.rs  hotp_struct.rs  hotp_verify.rs  radix.rs  secret.rs  totp.rs  totp_create.rs  totp_fn.rs  totp_generate.rs  totp_match_rfc_samples.rs  totp_provisioning_uri.rs  totp_struct.rs  totp_verify.rs
