[package]
name = "rusotp"
version = "0.3.3"
authors = ["indrajit"]
edition = "2021"
rust-version = "1.60.0"
description = "Rust implementation of the HOTP and TOTP algorithms"
documentation = "https://docs.rs/rusotp"
readme = "README.md"
homepage = "https://eendroroy.github.io/rusotp"
repository = "https://github.com/eendroroy/rusotp"
license = "AGPL-3.0"
keywords = ["otp", "hotp", "totp", "RFC4226", "RFC6238"]
categories = ["authentication", "algorithms"]
exclude = ["/tests", "/examples", "/c_examples", "/c_examples.sh"]

[lib]
name = "rusotp"
path = "src/lib.rs"
edition = "2021"
crate-type = ["staticlib", "lib", "cdylib"]

[dependencies]
hmac = "=0.12.1"
sha2 = "=0.10.8"
num-bigint = "=0.4.6"
urlencoding = "=2.1.3"
sha1 = "=0.10.6"

[dev-dependencies]
criterion = { version = "=0.6.0", features = ["html_reports"] }
itertools = "=0.14.0"

[[bench]]
name = "hotp"
harness = false
