[package]
name = "rusotp"
version = "0.3.9"
authors = ["indrajit"]
edition = "2021"
rust-version = "1.74.0"
description = "Rust implementation of the HOTP and TOTP algorithms"
documentation = "https://docs.rs/rusotp"
readme = "README.md"
homepage = "https://eendroroy.github.io/rusotp"
repository = "https://github.com/eendroroy/rusotp"
license = "AGPL-3.0"
keywords = ["otp", "hotp", "totp", "RFC4226", "RFC6238"]
categories = ["authentication", "algorithms"]

[lib]
name = "rusotp"
path = "src/lib.rs"
crate-type = ["staticlib", "lib", "cdylib"]

[dependencies]
hmac = "=0.12.1"
sha1 = "=0.10.6"
sha2 = "=0.10.9"
num-bigint = "=0.4.6"
urlencoding = "=2.1.3"

[dev-dependencies]
criterion = { version = "=0.6.0", features = ["html_reports"] }
itertools = "=0.14.0"
inline-c = "=0.1.8"

[build-dependencies]
cbindgen = "=0.29.0"

[[bench]]
name = "hotp"
harness = false
