# Copyright (c) Indrajit Roy
#
# This file is licensed under the Affero General Public License version 3 or
# any later version.
#
# See the file LICENSE for details.

[package]
name = "rusotp"
version = "0.5.0-alpha2"
authors = ["indrajit"]
edition = "2021"
rust-version = "1.74.0"
description = "Rust implementation of the HOTP and TOTP algorithms"
documentation = "https://docs.rs/rusotp"
readme = "README.md"
homepage = "https://eendroroy.github.io/rusotp"
repository = "https://github.com/eendroroy/rusotp"
license = "AGPL-3.0"
keywords = ["otp", "hotp", "totp", "RFC4226", "RFC6238"]
categories = ["authentication", "algorithms"]

[lib]
name = "rusotp"
path = "src/lib.rs"
crate-type = ["staticlib", "lib", "cdylib"]

[dependencies]
hmac = "=0.12.1"
sha1 = "=0.10.6"
sha2 = "=0.10.9"
num-bigint = "=0.4.6"
urlencoding = "=2.1.3"
base32ct = { version = "=0.3.0", features = ["alloc"] }
qrcode = "=0.14.1"
image = "=0.25.8"

[dev-dependencies]
criterion = { version = "=0.7.0", features = ["html_reports"] }
itertools = "=0.14.0"
inline-c = "=0.1.8"

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
termion = "=4.0.5"
colored = "=3.0.0"

[build-dependencies]
cbindgen = "=0.29.2"

[[bench]]
name = "hotp"
harness = false
